--- a/index.html
+++ b/index.html
@@ -4,39 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Birthday Button</title>
-  <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css">
-  <style>
-    /* CSS styles will go here */
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="birthday-button">
-    <button class="birthday-button__button" id="button">Press me!</button>
-    <div class="birthday-button__cake">
-      <svg class="cake">
-        <g class="cake__eyes">
-          <!-- Eyes SVG here -->
-        </g>
-        <g class="cake__frosting">
-          <!-- Frosting SVG here -->
-        </g>
-        <g class="cake__candle">
-          <!-- Candles SVG here -->
-        </g>
-      </svg>
-    </div>
+    <button class="birthday-button__button">Click Me!</button>
+    <div class="birthday-button__cake">🍰</div>
   </div>
 
-  <label>
-    <input type="checkbox" id="volume">
-    <svg><path /></svg>
-  </label>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/MorphSVGPlugin.min.js"></script>
-  <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
-  <script>
-    // JavaScript code will go here
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
+
