--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
   <div class="birthday-button">
     <button class="birthday-button__button">Click Me!</button>
-    <div class="birthday-button__cake">🍰</div>
+    <div class="birthday-button__cake" style="display: none;">🍰</div>
+  </div>
+  
+  <div class="cake__eyes" style="display: none;">
+    <!-- Add your SVG or other elements here for eyes -->
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
 
